--- a/menu.html
+++ b/menu.html
@@ -8,10 +8,20 @@
     <link rel="stylesheet" media="all" href="menu.css" />
 </head>
 <body>
+    <div class="header">
+        <h2>Scroll Down</h2>
+        <p>Scroll down to see the sticky effect.</p>
+    </div>
+
     <div id="navbar">
         <a href="#home">Início</a>
         <a href="#news">Notícias</a>
         <a href="#contact">Contato</a>
+    </div>
+
+    <div class="content">
+        <h3>Sticky Navigation Example</h3>
+        <p></p>
     </div>
 </body>
 </html>
