--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,7 @@
     </div>
 
     <div id="navbar">
-        <a href="#home">Início</a>
+        <a class="active" href="#home">Início</a>
         <a href="#news">Notícias</a>
         <a href="#contact">Contato</a>
     </div>
